--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-@import url('../fonts/fonts.css');
+@font-face {
+    font-family: 'ragasta';
+    src: url('../fonts/Ragasta.woff') format('woff');
+}
 
 * {
     padding: 0;
@@ -9,19 +12,31 @@
     scroll-behavior: smooth;
 }
 
+::-webkit-scrollbar{
+    width: 10px;
+    background-color: #000;
+}
+
+::-webkit-scrollbar-thumb{
+    background-color: #fff;
+    border-radius: 10px;
+}
+
 html {
     height: 100%;
+    width: 100vw;
     background-color: #fff;
 }
 
 body {
     overflow-x: hidden;
     height: 100%;
-    width: 100%;
+    width: 100vw;
+    position: relative;
 }
 
 nav {
-    width: 100%;
+    width: 100vw;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -32,7 +47,7 @@ nav {
 }
 
 nav img {
-    width: 50%;
+    width: 271px;
 }
 
 nav ul {
@@ -50,6 +65,10 @@ nav a {
     position: relative;
 }
 
+nav a:hover {
+    cursor: pointer;
+}
+
 nav a::after {
     content: '';
     position: absolute;
@@ -64,12 +83,37 @@ nav a:hover::after {
     transform: scaleX(1);
 }
 
+.mobile {
+    display: none;
+}
+
+/*------------- HOME --------------*/
+
 .home {
     width: 100vw;
     height: 100vh;
     background-image: linear-gradient(0deg, transparent 70%, #000 200%), url('https://images.pexels.com/photos/2253870/pexels-photo-2253870.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1');
     background-size: cover;
+    position: relative;
 }
+
+svg {
+    position: absolute;
+    width: 3%;
+    fill: #fff;
+    bottom: 5%;
+    left: 50%;
+    transform: translate(-50%) rotate(90deg);
+    animation: bounce 1s infinite alternate cubic-bezier(.83,.01,.36,1.02);
+}
+
+@keyframes bounce {
+    to {
+        bottom: 10%;
+    }
+}
+
+/*-------------- GALERIA ---------------*/
 
 .galeria {
     width: 100%;
@@ -84,13 +128,6 @@ nav a:hover::after {
     position: absolute;
     background-position: center;
     background-size: cover;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 300%;
-    font-family: montserrat;
-    color: rgb(12, 243, 27);
-    font-weight: 900;
 }
 
 .foto#img1 {
@@ -192,6 +229,7 @@ nav a:hover::after {
     color: #000;
     letter-spacing: 5px;
     position: relative;
+    transition: .8s;
 }
 
 .container-galeria a::after {
@@ -239,6 +277,7 @@ nav a:hover::after {
     padding: 30px;
     font-family: montserrat;
     font-size: 23px;
+    text-align: justify;
 }
 
 #sobre .texto h4 {
@@ -285,8 +324,8 @@ nav a:hover::after {
     align-items: center;
     flex-direction: column;
     width: 30%;
-    height: 50vh;
-    padding: 0 30px;
+    height: 40vh;
+    padding: 0 40px;
     background-color: #fff;
     border-radius: 30px;
 }
@@ -297,6 +336,8 @@ nav a:hover::after {
     font-weight: 500;
     color: #000;
     font-size: 17px;
+    text-align: justify;
+    justify-self: baseline;
 }
 
 .titulo {
@@ -319,11 +360,11 @@ nav a:hover::after {
     text-align: center;
     position: relative;
     padding: 0 30px;
+    margin-bottom: 100px;
 }
 
 #depoimentos .titulo {
     color: #000;
-    margin: 0% 30% 1% 0;
 }
 
 .container-depoimento {
@@ -344,15 +385,17 @@ nav a:hover::after {
     display: flex;
     justify-content: center;
     align-items: center;
-    text-align: start;
+    text-align: justify;
+    justify-content: left;
     font-family: montserrat;
     gap: 0 20px;
     padding: 30px 40px;
     border-radius: 30px;
 }
 
-.depoimento p {
+.relato {
     font-weight: 200;
+    font-size: 1px;
 }
 
 .depoimento .perfil {
@@ -487,189 +530,170 @@ hr {
 
 #curso {
     width: 100%;
-    height: 200vh;
-    background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.95) 0%, rgba(0, 0, 0, .95) 100%), url('https://images.pexels.com/photos/821749/pexels-photo-821749.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1');
+    display: grid;
+    height: fit-content;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 300px 400px 400px 400px 150px;
+    grid-template-areas:
+        ". intro ."
+        ". intro ."
+        "infos infos infos"
+        "infos infos infos"
+        "recado recado recado";
+    padding: 10% 0;
+    background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.93) 0%, rgba(0, 0, 0, .93) 100%), url('https://images.pexels.com/photos/821749/pexels-photo-821749.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1');
     background-size: cover;
-    position: relative;
-}
-
-.intro img {
-    width: 60%;
-    background-color: red;
 }
 
 .intro {
-    position: absolute;
-    left: 50%;
-    top: 10%;
-    margin: 0 auto;
-    transform: translateX(-50%);
+    grid-area: intro;
     display: flex;
-    justify-content: center;
+    justify-self: center;
     align-items: center;
     flex-direction: column;
-    gap: 20px 0;
-}
-
-.intro p {
     color: #fff;
-    font-family: montserrat;
-    font-size: 150%;
     text-align: center;
+    font-family: montserrat;
+    gap: 10px 0;
+    font-weight: 400;
 }
 
 .intro a {
     color: #fff;
-    font-family: montserrat;
-    font-weight: 100;
-    unicode-range: U+F00-FFF;
+    font-weight: 200;
+}
+
+.intro a::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 1px;
+    bottom: 0;
+    left: 0;
+    background-color: #fff;
+}
+
+.intro img {
+    width: 70%;
 }
 
 .infos {
-    position: absolute;
-    color: #fff;
-    font-family: 'montserrat';
-    left: 50%;
-    top: 40%;
-    transform: translateX(-50%);
-    width: 80%;
-    height: 55%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: justify;
-    text-justify: inter-word;
-}
-
-.container h4 {
-    font-family: 'ragasta';
+    height: 80%;
+    width: 100%;
+    padding: 0 10%;
+    grid-area: infos;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    grid-template-areas:
+        "info1 info1 info4"
+        "info2 info3 info4";
+    grid-row-gap: 10px;
+    grid-column-gap: 10px;
 }
 
 .container {
     display: flex;
+    padding: 3% 10%;
     justify-content: center;
-    flex-direction: column;
     align-items: center;
+    flex-direction: column;
     transition: .5s;
-    overflow: hidden;
+}
+
+.container p {
+    text-align: justify;
+    justify-items: baseline;
+    font-family: montserrat;
+}
+
+.infos h4 {
+    text-align: center;
+    font-size: 2rem;
+    font-family: ragasta;
+    line-height: 100%;
+    margin-bottom: 2%;
 }
 
 .info1 {
-    width: 50%;
-    height: 35%;
+    grid-area: info1;
     border: 2px solid #fff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    padding: 1.5%;
-    position: absolute;
-    left: 10%;
-    top: 0;
     border-top-left-radius: 20px;
-}
-
-.info1 h4 {
-    font-size: 200%;
-    margin-bottom: 2%;
-    line-height: 100%;
-    text-align: center;
+    color: #fff;
 }
 
 .info2 {
+    grid-area: info2;
     border: 2px solid #fff;
-    width: 24%;
-    height: 42%;
-    padding: 1%;
-    padding: 1.5%;
-    position: absolute;
-    left: 10%;
-    top: 38%;
     border-bottom-left-radius: 20px;
-}
-
-.info2:hover,
-.info1:hover {
-    background-color: #fff;
-    color: #000;
-    cursor: default;
-}
-
-.info2 h4 {
-    font-size: 200%;
-    margin-bottom: 2%;
-    text-align: center;
+    color: #fff;
 }
 
 .info3 {
-    width: 24%;
-    height: 42%;
+    grid-area: info3;
     background-color: #fff;
-    color: #000;
-    position: absolute;
-    top: 38%;
-    left: 36%;
-    padding: 1.5%;
-}
-
-.info3 h4 {
-    font-size: 200%;
-    margin-bottom: 2%;
-    text-align: center;
 }
 
 .info4 {
+    grid-area: info4;
     background-color: #fff;
-    color: #000;
-    width: 28%;
-    height: 80%;
-    padding: 3%;
-    position: absolute;
-    right: 10%;
-    top: 0;
-    font-size: 114%;
     border-radius: 0 20px 20px 0;
 }
 
-.info4 h4 {
-    font-size: 300%;
-    line-height: 100%;
-    margin-bottom: 5%;
-    text-align: center;
+.info4 p {
+    width: 80%;
+    font-size: 1.2rem;
+}
+
+.info1:hover, .info2:hover {
+    background-color: #fff;
+    color: #000;
+    border: 0;
+    cursor: default;
 }
 
 .info3:hover,
 .info4:hover {
-    color: #fff;
     background-color: transparent;
     border: 2px solid #fff;
+    color: #fff;
     cursor: default;
 }
 
 .recado {
-    text-align: center;
-    position: absolute;
+    grid-area: recado;
     color: #fff;
-    bottom: 9%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.recado p {
+    font-size: 1.2rem;
     width: 50%;
-    left: 25%;
-    font-family: 'montserrat';
-    font-weight: 200;
+    font-weight: 100;
+    font-family: montserrat;
+    text-align: center;
 }
 
 .recado h4 {
-    font-family: 'ragasta';
-    font-size: 300%;
-    margin-bottom: 0.5%;
+    font-family: ragasta;
+    font-size: 2.5rem;
 }
 
 /*------------------ RODAPÉ -------------------*/
 
 .rodape {
-    width: 100%;
-    height: 40%;
-    display: flex;
-    justify-content: space-between;
+    height: 30vh;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 50% 50%;
+    gap: 0px 0px;
+    grid-template-areas:
+        "esquerda esquerda direita"
+        "esquerda esquerda direita";
     background-color: #000;
 }
 
@@ -683,9 +707,9 @@ hr {
 }
 
 .esquerda {
+    grid-area: esquerda;
     display: flex;
-    width: 70%;
-    gap: 0 5%;
+    gap: 0 20px;
     align-items: center;
 }
 
@@ -704,11 +728,12 @@ hr {
 }
 
 .direita {
-    text-align: end;
+    grid-area: direita;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin-right: 2%;
+    align-items: end;
+    padding-right: 5%;
 }
 
 .direita h4 {
@@ -726,14 +751,16 @@ hr {
 }
 
 .socialmedia {
+    text-align: end;
+    width: fit-content;
     display: flex;
-    flex-direction: column;
+    gap: 0 10px;
     position: relative;
     font-family: 'ragasta';
     font-size: 1.2rem;
     line-height: 100%;
     color: rgb(224, 174, 11);
-    margin-top: 50%;
+    margin-top: 6%;
 }
 
 .icon:hover {
@@ -744,7 +771,6 @@ hr {
 
 .instagram {
     width: 25px;
-    position: absolute;
     bottom: -100%;
     right: 10%;
     transition: .3s;
@@ -752,16 +778,12 @@ hr {
 }
 
 .facebook {
-    position: absolute;
     width: 15px;
     bottom: -93%;
     right: 35%;
     transition: .3s;
     fill: #fff;
 }
-
-
-
 
 .scroll {
     position: fixed;
